--- a/package.json
+++ b/package.json
@@ -20,13 +20,31 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@auth0/cordova": "^0.3.0",
     "@ionic-native/core": "~4.15.0",
+    "@ionic-native/google-plus": "^4.17.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/storage": "2.2.0",
+    "@ultimate/ngxerrors": "^1.4.0",
+    "angularfire2": "^5.1.0",
+    "auth0-js": "^9.8.1",
+    "cordova-android": "7.0.0",
+    "cordova-ios": "4.5.5",
+    "cordova-plugin-customurlscheme": "^4.3.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-googleplus": "5.3.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^2.2.0",
+    "cordova-plugin-safariviewcontroller": "^1.5.4",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "firebase": "^5.5.9",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "rxjs": "5.5.11",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
@@ -34,5 +52,30 @@
     "@ionic/app-scripts": "3.2.0",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-safariviewcontroller": {},
+      "cordova-plugin-customurlscheme": {
+        "URL_SCHEME": "io.ionic.fellow_traveler",
+        "ANDROID_SCHEME": "io.ionic.fellow_traveler",
+        "ANDROID_HOST": "matocas.auth0.com",
+        "ANDROID_PATHPREFIX": "/cordova/io.ionic.fellow_traveler/callback"
+      },
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "myreversedclientid",
+        "WEB_APPLICATION_CLIENT_ID": "yourwebapplicationclientid"
+      }
+    },
+    "platforms": [
+      "ios",
+      "android"
+    ]
+  }
 }
